--- a/dal/Cargo.toml
+++ b/dal/Cargo.toml
@@ -6,3 +6,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+
+model = { path = "../model" }
+dal-api = { path = "../dal-api" }
+
+futures="0.3"       # gives us `Stream`
