Refactorings: split the Q3 events model + Fix the Logic events to get back the line number + improvements in the logic code. Next: reduce error reporting redundancies

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,7 +21,7 @@ members = [
     "common",
 
     # general libraries
-    "quake3-server-log",
+    "quake3-server-events",
 ]
 
 # linking optimizations for extra performance in release mode
