--- a/model/Cargo.toml
+++ b/model/Cargo.toml
@@ -6,3 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+
+# gives us `Stream`
+futures = "0.3"
+
