--- a/common/Cargo.toml
+++ b/common/Cargo.toml
@@ -6,3 +6,22 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+
+
+[dev-dependencies]
+
+# dependencies for benchmarks
+#############################
+
+criterion    = { version = "0.5", features=["html_reports"] }
+
+# gives us `Stream`
+futures = "0.3"
+
+# for interable constants
+once_cell = "1"
+
+
+[[bench]]
+name = "iterators_and_streams"
+harness = false
