--- a/bll-api/Cargo.toml
+++ b/bll-api/Cargo.toml
@@ -6,3 +6,6 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+common = { path = "../common" }
+model = { path = "../model" }
+dal-api = { path = "../dal-api" }
