--- a/bll/Cargo.toml
+++ b/bll/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 
 common = { path = "../common" }
 model = { path = "../model" }
+bll-api = { path = "../bll-api" }
 dal-api = { path = "../dal-api" }
 quake3-server-log = { path = "../quake3-server-events" }
 
