--- a/bll/Cargo.toml
+++ b/bll/Cargo.toml
@@ -11,7 +11,7 @@ common = { path = "../common" }
 model = { path = "../model" }
 bll-api = { path = "../bll-api" }
 dal-api = { path = "../dal-api" }
-quake3-server-log = { path = "../quake3-server-events" }
+quake3-server-events = { path = "../quake3-server-events" }
 
 log = { version = "0.4", features = [] }
 
