--- a/dal-api/Cargo.toml
+++ b/dal-api/Cargo.toml
@@ -9,7 +9,7 @@ edition = "2021"
 
 common = { path = "../common" }
 model = { path = "../model" }
-quake3-server-log = { path = "../quake3-server-events" }
+quake3-server-events = { path = "../quake3-server-events" }
 
 # gives us `Stream`
 futures = "0.3"
