--- a/dal/Cargo.toml
+++ b/dal/Cargo.toml
@@ -10,7 +10,7 @@ edition = "2021"
 common = { path = "../common" }
 model = { path = "../model" }
 dal-api = { path = "../dal-api" }
-quake3-server-log = { path = "../quake3-server-events" }
+quake3-server-events = { path = "../quake3-server-events" }
 
 log = "0.4"
 
